--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,37 @@
 @tailwind components;
 @tailwind utilities;
 
-:checked + .hidden {
+/* Mostra/nascondi il menu quando il checkbox è selezionato */
+#toggleMenu:checked ~ #navbar-sticky {
 	display: block;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+	display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+}
+
+/* Stili personalizzati per l'effetto di sfumatura */
+.scroll-gradient {
+	position: relative;
+}
+
+.scroll-gradient::after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 100px; /* Altezza dell'effetto di sfumatura */
+	pointer-events: none; /* Permetti il passaggio degli eventi al contenuto sottostante */
+	background: linear-gradient(
+		to bottom,
+		rgba(255, 255, 255, 0),
+		#ffba1c
+	); /* Gradient trasparente a bianco */
 }
